[package]
name = "protocol-os"
version = "0.1.0"
authors = ["Dengjianping <djptux@gmail.com>"]
edition = "2018"

[build]
target = "x86_64-protocol_os.json"

[dependencies]
bootloader = "0.9"
lazy_static = { version = "1.4.0", default-features = false, features = ["spin_no_std"] }
spin = "0.5"
volatile = "0.2"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
